== 0.2.0 / 2008-04-24 (vosechu)
* major enhancements
  * Actually runs headless via the rulang command. Requires root to build the beam file in gem directory. This will go away so that the beam can be built anywhere. 

== 0.1.2 / 2008-01-10 (vosechu)
* major enhancements
  * Runs headless by using the rulang command or via the command-line using the
    -noshell switch to erl. 
  
* bugs / limitations
  * rulang command isn't ready for prime time at all

== 0.1.1 / 2008-01-07 (vosechu)
* 2 minor enhancements
  * auto-detect whether someone has put a period at the end of a set of exprs
  * updated specs catch a few more edge cases

== 0.1 / 2008-01-04 (vosechu)

* 1 major enhancement
  * Allows many-lined Erlang commands when using the Erlang class for direct
    access. 
* 3 minor enhancements
  * Revised error checking to allow custom resolution
  * stop_server/0 now shuts down any servers running in an erl shell
  * created tests to run with RSpec and autotest (erl server must be running 
    on port 9900).
* 3 other changes
  * Forked onto rubyforge complete with rdocs, gem, etc.
  * Translated some comments into english as well as the README
  * Packaged explicitly with gpl documentation